--- a/tools/lazdatadesktop/languages/lazdatadesktop.de.po
+++ b/tools/lazdatadesktop/languages/lazdatadesktop.de.po
@@ -778,9 +778,6 @@ msgid "Value"
 msgstr "Wert"
 
 #: lazdatadeskstr.swhichcurrentdicttouse
-msgid ""
-"A data dictionary is active.Would you like to import into this data "
-"dictionary ?"
-msgstr ""
-"Es ist ein Datadictionary aktiv. Soll in dieses Datadictionary importiert "
-"werden?"
+msgid "A data dictionary is active.Would you like to import into this data dictionary ?"
+msgstr "Es ist ein Datadictionary aktiv. Soll in dieses Datadictionary importiert werden?"
+
