--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -5,7 +5,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2014-08-13 02:56+0400\n"
+"PO-Revision-Date: 2014-09-20 00:44+0400\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,3325,-1,-1\n"
@@ -8383,6 +8383,10 @@ msgctxt "lazarusidestrconsts.lisexport"
 msgid "Export"
 msgstr "Экспортировать"
 
+#: lazarusidestrconsts.lisexportallitemstofile
+msgid "Export All Items to File"
+msgstr "Экспортировать всё в файл"
+
 #: lazarusidestrconsts.lisexporthtml
 msgid "Export as HTML"
 msgstr "Экспортировать в HTML"
@@ -9330,6 +9334,10 @@ msgstr "Импортировать"
 #: lazarusidestrconsts.lisimportant
 msgid "Important"
 msgstr "Важное"
+
+#: lazarusidestrconsts.lisimportfromfile
+msgid "Import from File"
+msgstr "Импортировать из файла"
 
 #: lazarusidestrconsts.lisimportlist
 msgid "Import list"
@@ -12957,9 +12965,9 @@ msgstr "Вставить"
 msgid "paste clipboard"
 msgstr "Вставить из буфера обмена"
 
-#: lazarusidestrconsts.lispastetextfromclipboard
-msgid "Paste text from clipboard"
-msgstr "Вставить текст из буфера обмена."
+#: lazarusidestrconsts.lispastefromclipboard
+msgid "Paste from clipboard"
+msgstr "Вставить из буфера обмена"
 
 #: lazarusidestrconsts.lispath
 msgid "Path"
